new H@H settngs; Uri launch; uri regex bug fix
Former-commit-id: 21a34b54e13bac9ec2376fda2b09af3a6fd24a39 [formerly d6ef8cddd2b97983ccdbad785ae316368ba4a272]
Former-commit-id: 360d6b69b37cceabaec2dda40cb6808ae0ccab34

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Controls\ExcludedLanguagesSelector.xaml.cs">
       <DependentUpon>ExcludedLanguagesSelector.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\InAppNavigator.cs" />
     <Compile Include="Controls\PullToRefreshIndicator.cs" />
     <Compile Include="Controls\TagPresenter.cs" />
     <Compile Include="Converters\EmptyConverter.cs" />
@@ -175,6 +176,7 @@
     <Compile Include="Themes\ThemeHelperControl.xaml.cs">
       <DependentUpon>ThemeHelperControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UriHandler.cs" />
     <Compile Include="ViewModels\CachedVM.cs" />
     <Compile Include="ViewModels\CacheStorage{TKey,TCache}.cs" />
     <Compile Include="ViewModels\GalleryListVM{T}.cs" />
