--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -157,6 +157,7 @@
     </Compile>
     <Compile Include="Tag.cs" />
     <Compile Include="TorrentInfo.cs" />
+    <Compile Include="UriLauncher.cs" />
     <Content Include="Properties\ExClient.rd.xml" />
     <PRIResource Include="Strings\en\NameSpace.resw" />
     <PRIResource Include="Strings\en\Category.resw" />
