--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -6,7 +6,7 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.1",
     "MvvmLight": "5.3.0",
-    "PlatformSpecific.Analyzer": "2.0.3"
+    "MvvmLightLibs": "5.3.0"
   },
   "frameworks": {
     "uap10.0": {}
