lazyload for favorite tag
Former-commit-id: 6685203e0a31d05048c41473d21eb0c8f9379a1f [formerly f99d78625a61e048ad23ff6b316ac571bced7d2b]
Former-commit-id: 58fb01ef677bf5b8e34310b78bd3993012d03212

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -324,6 +324,11 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
+    <Page Include="Themes\Favorites.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
     <Page Include="Themes\Categories.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
