--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-* eol=crlf
+*.tt eol=crlf
 
 ###############################################################################
 # Set default behavior for command prompt diff.
