Add e-hentai support
Former-commit-id: 968fa29f0fd23b3105486f11944c489ef270214d [formerly e3cb1f6243fb5fa65fd5dab2ec67723edf79c07a]
Former-commit-id: 06c7f187d94eb6e6b8939a65c08840e30306da39

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -128,7 +128,9 @@
     <Compile Include="Helpers\MathHelper.cs" />
     <Compile Include="GalleryList{T}.cs" />
     <Compile Include="Api\ApiRequest.cs" />
+    <Compile Include="HostType.cs" />
     <Compile Include="Internal\RangedCollection{T}.cs" />
+    <Compile Include="Internal\UriProvieder.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Launch\LaunchResult.cs" />
     <Compile Include="Launch\UriHandler.cs" />
