--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Helpers\ConnectionHelper.cs" />
     <Compile Include="DictionaryExtention.cs" />
     <Compile Include="GalleryImage.cs" />
+    <Compile Include="SaveGalleryProgress.cs" />
     <Compile Include="SearchResultBase.cs" />
     <Compile Include="Settings\ExcludedLanguagesSettingProvider.cs" />
     <Compile Include="Settings\HahProxySettingProvider.cs" />
