More comments info
Former-commit-id: bd31a005bdf2b5848cdc132105cc4bce89eca5ee [formerly 9e70e6294880bbd8ae2a3d5848a8c84496cb51d4]
Former-commit-id: 87b9043191cd2c121f98c3946d3b8bc89fba07a9

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Api\GalleryToken.cs" />
     <Compile Include="Api\ImageInfo.cs" />
     <Compile Include="CachedGallery.cs" />
+    <Compile Include="CommentCollection.cs" />
     <Compile Include="FavoriteCategory.cs" />
     <Compile Include="FavoriteCollection.cs" />
     <Compile Include="FavoritesSearchResult.cs" />
@@ -132,6 +133,7 @@
     <Compile Include="Launch\LaunchResult.cs" />
     <Compile Include="Launch\UriHandler.cs" />
     <Compile Include="Namespace.cs" />
+    <Compile Include="ObservableCollection{T}.cs" />
     <Compile Include="SavedGallery.cs" />
     <Compile Include="Client-Forum.cs" />
     <Compile Include="Comment.cs" />
