--- a/ExClient/project.json
+++ b/ExClient/project.json
@@ -1,10 +1,12 @@
 ﻿{
   "dependencies": {
     "HtmlAgilityPack": "1.4.9.5",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.1",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.1",
     "MvvmLightLibs": "5.3.0",
-    "Newtonsoft.Json": "9.0.1"
+    "Newtonsoft.Json": "9.0.1",
+    "System.Threading.Tasks.Extensions": "4.3.0",
+    "System.ValueTuple": "4.3.0"
   },
   "frameworks": {
     "uap10.0": {}
