vote for comments

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvancedSearchOptions.cs" />
+    <Compile Include="Api\CommentVote.cs" />
     <Compile Include="Api\GalleryData.cs" />
     <Compile Include="Api\GalleryInfo.cs" />
     <Compile Include="Api\GalleryToken.cs" />
