--- a/EhWikiClient/project.json
+++ b/EhWikiClient/project.json
@@ -1,7 +1,9 @@
 ﻿{
   "dependencies": {
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.1",
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.1",
-    "Newtonsoft.Json": "9.0.1"
+    "Newtonsoft.Json": "10.0.1"
   },
   "frameworks": {
     "uap10.0": {}
