--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -3,6 +3,7 @@
     "HockeySDK.UWP": "4.1.6",
     "JyAnalytics": "1.0.10",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.1",
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.1",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.1",
     "MvvmLight": "5.3.0",
