--- a/EhWikiClient/EhWikiClient.csproj
+++ b/EhWikiClient/EhWikiClient.csproj
@@ -109,10 +109,17 @@
   <ItemGroup>
     <Compile Include="AsyncWarpper.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="Migrations\20170325091210_FirstMigration.cs" />
+    <Compile Include="Migrations\20170325091210_FirstMigration.designer.cs">
+      <DependentUpon>20170325091210_FirstMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\WikiDbModelSnapshot.cs" />
+    <Compile Include="Models\WikiDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
     <EmbeddedResource Include="Properties\EhWikiClient.rd.xml" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
