--- a/EhTagTranslatorClient/EhTagTranslatorClient.csproj
+++ b/EhTagTranslatorClient/EhTagTranslatorClient.csproj
@@ -138,6 +138,7 @@
   <ItemGroup>
     <Compile Include="EhTagDatabase.cs" />
     <Compile Include="MarkdownText.cs" />
+    <Compile Include="Model\TranslateDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
     <EmbeddedResource Include="Properties\EhTagTranslatorClient.rd.xml" />
