--- a/EhWikiClient/EhWikiClient.csproj
+++ b/EhWikiClient/EhWikiClient.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="AsyncWarpper.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="DataBase.cs" />
     <Compile Include="Migrations\20170325091210_FirstMigration.cs" />
     <Compile Include="Migrations\20170325091210_FirstMigration.designer.cs">
       <DependentUpon>20170325091210_FirstMigration.cs</DependentUpon>
