bug fix, new wiki db colunm
Former-commit-id: ea5a4bf791a862eb3aad5618d80c972829959e13 [formerly b1a69880d4ced7087950480f4b331ae1fade3678]
Former-commit-id: 519e696f65d91357cbb5e3bc7ef44ce7210f0931

--- a/EhWikiClient/EhWikiClient.csproj
+++ b/EhWikiClient/EhWikiClient.csproj
@@ -114,6 +114,10 @@
     <Compile Include="Migrations\20170325091210_FirstMigration.designer.cs">
       <DependentUpon>20170325091210_FirstMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20170327042442_AddLastUpdateAndIsValid.cs" />
+    <Compile Include="Migrations\20170327042442_AddLastUpdateAndIsValid.designer.cs">
+      <DependentUpon>20170327042442_AddLastUpdateAndIsValid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\WikiDbModelSnapshot.cs" />
     <Compile Include="Models\WikiDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
