--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -5,9 +5,10 @@
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.1",
-    "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.1",
+    "Microsoft.Toolkit.Uwp.UI.Controls": "1.4.0",
     "MvvmLight": "5.3.0",
-    "MvvmLightLibs": "5.3.0"
+    "MvvmLightLibs": "5.3.0",
+    "Opportunity.Converters": "1.0.1"
   },
   "frameworks": {
     "uap10.0": {}
